--- a/src/index.css
+++ b/src/index.css
@@ -350,3 +350,11 @@ img, .picture {
   }
 }
 
+@keyframes shine {
+  0% {
+    background-position: 200% 0;
+  }
+  100% {
+    background-position: -200% 0;
+  }
+}
